WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310244
Top scroll stretch notifications may be incorrect during rubber band restoration
https://bugs.webkit.org/show_bug.cgi?id=310244
Summary
Top scroll stretch notifications may be incorrect during rubber band restoration
Lily Spiniolas
Reported
2026-03-18 20:42:47 PDT
rdar://172886834
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2026-03-18 21:20:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60912
EWS
Comment 2
2026-03-18 23:01:16 PDT
Committed
309537@main
(91f4890b4242): <
https://commits.webkit.org/309537@main
> Reviewed commits have been landed. Closing PR #60912 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug