Source/WebKit/Shared/RemoteLayerTree/RemoteLayerTreeCommitBundle.h
@@ -72,9 +72,6 @@ struct MainFrameData {
     Markable<WebCore::PlatformLayerIdentifier> pageScalingLayerID; // Only used for non-delegated scaling.
     Markable<WebCore::PlatformLayerIdentifier> scrolledContentsLayerID;
     Markable<WebCore::PlatformLayerIdentifier> mainFrameClipLayerID;
-#if ENABLE(SCROLL_STRETCH_NOTIFICATIONS)
-    uint64_t topScrollStretch { 0 };
-#endif
 #endif
 
     double pageScaleFactor { 1 };
