Source/WebKit/WebProcess/WebPage/Cocoa/WebPageCocoa.mm
@@ -2293,12 +2293,6 @@ void WebPage::willCommitMainFrameData(MainFrameData& data, const TransactionID& 
         m_pendingEditorStateUpdateStatus = PendingEditorStateUpdateStatus::NotScheduled;
         m_needsEditorStateVisualDataUpdate = false;
     }
-
-#if ENABLE(SCROLL_STRETCH_NOTIFICATIONS)
-    auto scrollOrigin = mainFrameView->scrollOrigin();
-    auto scrollPosition = mainFrameView->scrollPosition();
-    data.topScrollStretch = static_cast<uint64_t>(std::max(0, -scrollOrigin.y() - scrollPosition.y()));
-#endif
 }
 
 void WebPage::didFlushLayerTreeAtTime(MonotonicTime timestamp, bool flushSucceeded)
